# geodesic

./: CMakeLists.txt  LICENSE  README.md  client.cc  client.h  emit.h  geod.cc  geod.h  geodesic.kdev4  geodesic.sln  geodesic.vcxproj  geodesic.vcxproj.filters  io.cc  ioid.h  light_source.cc  message.cc  message.h  runge.cc  server.cc  server.h  server_main.cc  space.cc  start.cc  start.h  task.cc  task.h  tensor.h  tensors.cc
include/: client.h  emit.h  errors.h  eye.h  geod.h  ioid.h  macros.h  message.h  runge.h  save.h  space.h  start.h  task.h  tensor.h
src/: client.cc  emit.cc  errors.cc  eye.cc  geod.cc  io.cc  light_source.cc  runge.cc  save.cc  server.cc  server_main.cc  space.cc  task.cc  tensor1.cc  tensor2.cc  tensor3.cc  tensors.cc
